--- a/.gitignore
+++ b/.gitignore
@@ -175,5 +175,7 @@ poetry.toml
 
 # LSP config files
 pyrightconfig.json
+test.py
+linkedin_search.log
 
 # End of https://www.toptal.com/developers/gitignore/api/python.
